@@ -57,7 +57,6 @@ SUBDIRS += plugins/indicator/OVRLY
 SUBDIRS += plugins/indicator/PC
 SUBDIRS += plugins/indicator/PER
 SUBDIRS += plugins/indicator/PP
-SUBDIRS += plugins/indicator/PRICE
 SUBDIRS += plugins/indicator/PVI
 SUBDIRS += plugins/indicator/PVT
 SUBDIRS += plugins/indicator/ROC
